
    <resources>
        <string name="app_name">서울Bottle</string>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="openDrawer">open_drawer</string>
        <string name="closeDrawer">close_drawer</string>

        <!-- Navigation Drawer menu labels -->
        <string name="nav_home">빈용기 보증금제도</string>
        <string name="nav_photos">빈용기 환급가격</string>
        <string name="nav_movies">빈용기수거 위치</string>
        <string name="nav_settings">My포인트</string>
        <string name="nav_about_us">포인트몰</string>

        <!-- Toolbar titles when navigation menu item is selected -->
        <string-array name="nav_item_activity_titles">
            <item>빈용기 보증금제도</item>
            <item>빈용기 환급가격</item>
            <item>빈용기수거 위치</item>
            <item>My포인트</item>
            <item>포인트몰</item>
        </string-array>

        <string name="action_clear_all">Clear All</string>
        <string name="action_logout">Logout</string>
        <string name="action_mark_all_read">Mark All as Read</string>

        <string name="client_id">827664520353-cvr0v577q871vk9cq964cvkcunj7om5d.apps.googleusercontent.com</string>


    </resources>

